# AD5693R

./: Cargo.toml
src/: encode.rs  lib.rs
